// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelError renders given React Element  1`] = `
<div
  class="dshPanel__error panel-content"
>
  <div
    class="euiText euiText--extraSmall"
  >
    <div
      class="euiTextColor euiTextColor--subdued"
    >
      <svg
        class="euiIcon euiIcon--medium euiIcon--danger euiIcon-isLoading"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div>
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`PanelError renders plain string 1`] = `
<div
  class="dshPanel__error panel-content"
>
  <div
    class="euiText euiText--extraSmall"
  >
    <div
      class="euiTextColor euiTextColor--subdued"
    >
      <svg
        class="euiIcon euiIcon--medium euiIcon--danger euiIcon-isLoading"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div>
        <p>
          test
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`PanelError renders string with markdown link 1`] = `
<div
  class="dshPanel__error panel-content"
>
  <div
    class="euiText euiText--extraSmall"
  >
    <div
      class="euiTextColor euiTextColor--subdued"
    >
      <svg
        class="euiIcon euiIcon--medium euiIcon--danger euiIcon-isLoading"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div>
        <p>
          <a
            href="http://www.elastic.co/"
          >
            test
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;
